Update API documentattion
